--- a/www/index.html
+++ b/www/index.html
@@ -23,11 +23,16 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Nada Magazine</title>
+        <title>Factura QR</title>
     </head>
     <body>
+        
+        <div class="p">
+            <h1 class="logo title">Bienvenido a Factura QR</h1>
+            Aquí podrás visualizar la información de los código QR de tus facturas (solo para México).
 
-        <h1 class="logo title">Nada Magazine</h1>
+                <a href="#" class="button start">Iniciar</a>
+        </div>
 
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
