--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
             <h1 class="logo title">Bienvenido a Factura QR</h1>
             Aquí podrás visualizar la información de los código QR de tus facturas (solo para México).
 
-                <a href="#" class="button start">Iniciar</a>
+                <a href="javascript:scan()" class="button start">Iniciar</a>
         </div>
 
         <script type="text/javascript" src="phonegap.js"></script>
