--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
             <h1 class="logo title">Factura QR</h1>
             <div id="info">Aquí podrás visualizar la información de los código QR de tus facturas (solo para México).</div>
 
-            <div class="data">
+            <div id="data" class="data">
                 <div class="data-title">RFC del emisor.</div>
                 <h2 id="re">ASDASD456</h2>
 
