added email function, testing

--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
                 info@neupix.com
             </div>
 
-            <a id="startBtn" href="javascript:scan()" class="button email">Enviar por email</a>
+            <a id="startBtn" href="#" class="button email">Enviar por email</a>
             <a id="startBtn" href="javascript:scan()" class="button start">Escanear QR</a>
         </div>
 
