--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Factura QR</title>
     </head>
-    <body id="body" class="init">
+    <body id="body" class="success">
         <div class="p">
             <h1 class="logo title">Factura QR</h1>
             <div class="help data-title">Escanea el código QR de tus facturas y mira su información (facturas mexicanas).</div>
@@ -53,7 +53,7 @@
                 info@neupix.com
             </div>
 
-            <a id="startBtn" href="#" class="button email">Enviar por email</a>
+            <a id="startBtn" href="javascript:email()" class="button email">Enviar por email</a>
             <a id="startBtn" href="javascript:scan()" class="button start">Escanear QR</a>
         </div>
 
