fix index error

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Factura QR</title>
     </head>
-    <body id="body" class="success">
+    <body id="body" class="init">
         <div class="p">
             <h1 class="logo title">Factura QR</h1>
             <div class="help data-title">Escanea el código QR de tus facturas y mira su información (facturas mexicanas).</div>
