fixing error handling

--- a/www/index.html
+++ b/www/index.html
@@ -44,12 +44,12 @@
                 <h2 id="id">¿?</h2>
             </div>
 
-            <div class="error-msj">
+            <div class="error-msj data-title">
                 Ocurrió un error, no se pudo leer el código o tiene un formato incorrecto.
                 <br/>
                 Este programa solo lee codigo QR de facturas mexicanas.
                 <br><br>
-                Por favor, intente de nuevo, o contacto a los desarrolladores. <br>
+                Por favor, intenta de nuevo, o contacta a los desarrolladores. <br>
                 info@neupix.com
             </div>
 
