--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
             <div class="error-msj data-title">
                 Ocurrió un error, no se pudo leer el código o tiene un formato incorrecto.
                 <br/>
-                Este programa solo lee codigo QR de facturas mexicanas.
+                Este programa solo lee códigos QR de facturas mexicanas.
                 <br><br>
                 Por favor, intenta de nuevo, o contacta a los desarrolladores. <br>
                 info@neupix.com
